// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opencog-cogutil - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Helps developers work with the OpenCog cogutil C++ utility library. Use this skill when working with cogutil threading utilities, logger functionality, configuration management, random number generators, benchmarking tools, or unit testing. USE FOR: install cogutil, build OpenCog, configure OpenCog logger, cogutil thread pool, cogutil configuration, OpenCog unit tests. DO NOT USE FOR: Azure services, cloud deployment, web applications.",
  "extractedKeywords": [
    "applications",
    "azure",
    "benchmarking",
    "build",
    "cloud",
    "cogutil",
    "configuration",
    "configure",
    "deployment",
    "developers",
    "diagnostic",
    "functionality",
    "generators",
    "helps",
    "install",
    "library",
    "logger",
    "management",
    "number",
    "opencog",
    "pool",
    "random",
    "services",
    "skill",
    "testing",
    "tests",
    "this",
    "thread",
    "threading",
    "tools",
    "unit",
    "utilities",
    "utility",
    "when",
    "with",
    "work",
    "working",
  ],
  "name": "opencog-cogutil",
}
`;

exports[`opencog-cogutil - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "applications",
  "azure",
  "benchmarking",
  "build",
  "cloud",
  "cogutil",
  "configuration",
  "configure",
  "deployment",
  "developers",
  "diagnostic",
  "functionality",
  "generators",
  "helps",
  "install",
  "library",
  "logger",
  "management",
  "number",
  "opencog",
  "pool",
  "random",
  "services",
  "skill",
  "testing",
  "tests",
  "this",
  "thread",
  "threading",
  "tools",
  "unit",
  "utilities",
  "utility",
  "when",
  "with",
  "work",
  "working",
]
`;
